--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,9 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+Because whales only sppeak vowels a, e, i , o and u
+
+We can create an array of those letters loops around userinput and return only those vowels
+
+Because whales exaggerate few sounds, we will return E/U as doubled from the english text
+
+Finally, all vowels collected will be joined togetther as 1 word and uppercased
